# Enyo

./: .commits  .gitignore  .gitmodules  CMakeLists.txt  README.md  board.cpp  board.hpp  config.hpp  eventlog.hpp  exepath.cpp  exepath.hpp  fen.cpp  fen.hpp  hce.hpp  main.cpp  movegen.hpp  movegen_helper.hpp  movelist.hpp  movepicker.hpp  mvlookup.hpp  nnue.cpp  nnue.hpp  perft.hpp  pgn.cpp  pgn.hpp  pos.hpp  probe.cpp  probe.hpp  search.cpp  search.hpp  see.hpp  settings.json  simd.h  thread.cpp  thread.hpp  tst.cpp  tt.hpp  types.hpp  uci.cpp  uci.hpp  (+5 more)
debug/replay/: CMakeLists.txt  replay.cpp
incbin/: incbin.h
magic/: CMakeLists.txt  magic.cpp  magic.hpp  magic_numbers.hpp
precalc/: CMakeLists.txt  bishop_attacks.hpp  king_attacks.hpp  knight_attacks.hpp  magic.cpp  pawn_attacks.hpp  precalc.cpp  rook_attacks.hpp  test_precalc.cpp
test/: gtest.cpp  tests.cpp
